# termcolor

./: LICENSE  Makefile.am  README.md  configure.ac  src  termcolor.pc.in
termcolor/: termcolor.c  termcolor.h  termcolor_Eterm.c  termcolor_Eterm.h  termcolor_aterm.c  termcolor_aterm.h  termcolor_konsole.c  termcolor_konsole.h  termcolor_private.c  termcolor_private.h  termcolor_rxvt.c  termcolor_rxvt.h  termcolor_unknown.c  termcolor_unknown.h  termcolor_xterm.c  termcolor_xterm.h
